[package]
edition = "2024"
name = "pl011"
version = "0.1.0"

[dependencies]
mbarrier = "0.1"
dma-api = { version = "0.3", features = ["alloc"] }
futures = { version = "0.3.31", features = ["alloc"], default-features = false }
log = "0.4"
kspin = "0.1"
aarch64-cpu = "10.0"
arm_gicv2 = "0.1"
tock-registers = "0.7.0"
spin_on = "0.1"

[dev-dependencies]
bare-test = "0.4"

[build-dependencies]
bare-test-macros = "0.2"

[[test]]
harness = false
name = "test"
